arrow_convert/tests/ui/struct_no_fields.rs
use arrow_convert::ArrowField;

#[derive(ArrowField)]
struct S {}

fn main() 
{}